--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     ]
   },
   "devDependencies": {
-    "babel-preset-react-app": "^10.0.1",
+    "babel-preset-react-app": "^10.0.1"
   
   }
 }
